Play sound for charging events
Post a notification with sound or vibration
when the device is plugged in to a power source.

Bug: 29737261
Test: manual - connected to a power source

Change-Id: I0e14654c4f72ee57e2432bbd22454f0a5c616991

--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -81,6 +81,9 @@
     <!-- Second line of invalid_charger, used in the notification form.  [CHAR LIMIT=NONE]-->
     <string name="invalid_charger_text">Use only the supplied charger.</string>
 
+    <!-- Title of the notification when plugged in to a power source. [CHAR LIMIT=NONE]-->
+    <string name="battery_plugged_title">Plugged in to power source</string>
+
     <!-- When the battery is low, this is the label of the button to go to the
          power usage activity to find out what drained the battery.  [CHAR LIMIT=30] -->
     <string name="battery_low_why">Settings</string>
